mobile view navbar, alignment, and image size fix, nodemon support

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -90,7 +90,7 @@ a:hover {
   display: none;
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 880px) {
   .NavbarItems {
     position: relative;
   }
@@ -99,7 +99,6 @@ a:hover {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 75vh;
     position: absolute;
     top: 80px;
     left: -100%;
@@ -175,6 +174,8 @@ a:hover {
     margin-right: 0px;
   }
 }
+
+
 
 @media screen and (max-width: 500px) {
     .nav-menu {
