--- a/src/components/pages/About.css
+++ b/src/components/pages/About.css
@@ -1,6 +1,4 @@
 .about_block {
-    padding: 3rem;
-    text-align: center;
     font-family: Bahnschrift;
   }
 
