--- a/src/components/pages/Consulting.css
+++ b/src/components/pages/Consulting.css
@@ -44,7 +44,7 @@
   
   img {
     position: relative;
-    width: 400px;
+    width: 100%;
     height: auto;
     margin-bottom: 20px;
     object-fit:contain;
