--- a/src/components/pages/JoinUs.css
+++ b/src/components/pages/JoinUs.css
@@ -30,3 +30,7 @@
   display: flex;
   justify-content: center;
 }
+
+img {
+  width: 100%;
+}
