--- a/src/components/pages/Projects.css
+++ b/src/components/pages/Projects.css
@@ -42,3 +42,7 @@
     padding-bottom: 10px;
     border-spacing: 40px 10px;
   }
+
+img {
+    width: 100%;
+}
